Switch to the new font distribution

--- a/vars.css
+++ b/vars.css
@@ -73,7 +73,7 @@
   /* COMMON **************************************************************************************/
 
   /* FONTS */
-  --lbs-fonts: LBSLato, Lato, "Trebuchet MS", sans-serif;
+  --lbs-fonts: Lato, "Trebuchet MS", sans-serif; /* It's up to the consumer of this var to make sure these fonts are loaded */
   --system-fonts: system-ui, -apple-system, "Segoe UI", "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
   /* LBS */
